# wserve

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: conventional-commits.yaml  pre-commit.yaml
src/: main.rs
